# xw

./: .gitignore  _main.py  _workspace.py  main.py  pyproject.toml  workspace.py
crossword/: __init__.py  _lib.py  lib.py
vocab/: tiny.dict
